# GitComPhys

oving_2/: CMakeCache.txt  cmake_install.cmake
oving_2/Task2/: Activator.cpp  Activator.hpp  Buffalo.cpp  Buffalo.hpp  BuffaloMain.cpp  CMakeCache.txt  CMakeLists.txt  Lattice.cpp  Lattice.hpp  Makefile  PercolationFromCameron.py  buffalo  connect.sh  example.txt  fsend.sh  get.sh  gmon.out  latticeWRONGNOTGOOD.cpp  latticeWRONGNOTGOOD.hpp  main  main.cpp  params.sh  reserveLattice.cpp  reserveLattice.hpp  send.sh  test.csv  test.py
oving_2/Task2/data/: P_infSquared_of_p.csv  P_inf_of_p.csv  chiValues.csv  giantComponents.csv  s_of_p.csv  test1.csv  test1000_1.csv  weightedAvgClusterSize.csv
oving_2/Task2/pyplot/: Plot_Cluster.py  Plot_variables.py
